UPDATE : update car function
