# app/Http/Controllers/API/CarController.php
@@ -6,6 +6,7 @@ use App\Http\Controllers\Controller;
 use App\Http\Requests\StoreCarRequest;
 use App\Http\Requests\UpdateCarRequest;
 use App\Models\Car;
+use App\Models\User;
 use Illuminate\Http\Request;
 
 /**
@@ -47,7 +48,7 @@ class CarController extends Controller
      *      operationId="storeCar",
      *      tags={"Cars"},
      *      summary="Store new car",
-     *      description="Returns project data",
+     *      description="Returns car data",
      *  @OA\Parameter(
      *      name="name",
      *      in="query",
@@ -76,7 +77,9 @@ class CarController extends Controller
      */
     public function store(StoreCarRequest $request)
     {
-        return response()->json(['Success' => Car::create($request->validated())]);
+        $validated = $request->validated();
+        $this->checkUserCarAndDissociate($validated);
+        return response()->json(Car::create($validated));
     }
 
     /**
@@ -114,50 +117,70 @@ class CarController extends Controller
         return response()->json($car);
     }
 
-        /**
-         * @OA\Put(
-         *      path="/api/cars/{id}",
-         *      operationId="updateCar",
-         *      tags={"Cars"},
-         *      summary="Update existing car",
-         *      description="Returns updated car data",
-         *      @OA\Parameter(
-         *          name="id",
-         *          description="Car id",
-         *          required=true,
-         *          in="path",
-         *          @OA\Schema(
-         *              type="integer"
-         *          )
-         *      ),
-         *   @OA\Response(
-         *      response=200,
-         *       description="Success"
-         *   ),
-         *   @OA\Response(
-         *      response=400,
-         *      description="Bad Request"
-         *   ),
-         *   @OA\Response(
-         *      response=404,
-         *      description="Not Found"
-         *   )
-         * )
-         **/
+    /**
+     * @OA\Put(
+     *      path="/api/cars/{car_id}",
+     *      operationId="updateCar",
+     *      tags={"Cars"},
+     *      summary="Update existing car",
+     *      description="Returns updated car data",
+     *      @OA\Parameter(
+     *          name="car_id",
+     *          description="Car id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="car_id",
+     *          description="Car id",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *   @OA\Parameter(
+     *       name="user_id",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="integer"
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="Not Found"
+     *   )
+     * )
+     **/
     public function update(UpdateCarRequest $request, Car $car)
     {
-        return response()->json(['Success' => $car->update($request->validated())]);
+        $validated = $request->validated();
+        $this->checkUserCarAndDissociate($validated);
+        $car->update($validated);
+        return response()->json(Car::find($validated['car_id']));
     }
 
     /**
      * @OA\Delete(
-     *      path="/api/cars/{id}",
+     *      path="/api/cars/{car_id}",
      *      operationId="deleteCar",
      *      tags={"Cars"},
      *      summary="Delete existing car",
      *      description="Deletes a record and returns no content",
      *      @OA\Parameter(
-     *          name="id",
+     *          name="car_id",
      *          description="Car id",
      *          required=true,
      *          in="path",
@@ -178,45 +201,18 @@ class CarController extends Controller
      */
     public function destroy(Car $car)
     {
-        return response()->json(['Success' => $car->delete()]);
+        return response()->json($car->delete());
     }
 
-    /**
-     * @OA\Put(
-     *      path="/api/update-car-user",
-     *      operationId="updateCarUser",
-     *      tags={"Cars"},
-     *      summary="Update car user",
-     *      description="Returns car data",
-     *  @OA\Parameter(
-     *      name="car_id",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="integer"
-     *      )
-     *   ),
-     *   @OA\Parameter(
-     *       name="user_id",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="integer"
-     *      )
-     *   ),
-     *   @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *     ),
-     *      @OA\Response(
-     *          response=400,
-     *          description="Bad Request"
-     *      )
-     * )
-     */
-    public function updateCarUser(Request $request)
+    private function checkUserCarAndDissociate($validatedData)
     {
-        $car = Car::whereId($request->car_id)->update(['user_id' => $request->user_id]);
-        return response()->json($car);
+        $user = User::where('id', $validatedData['user_id'])
+            ->with('car')
+            ->withCount('car')->first();
+        if ($user->car_count > 0 && $validatedData['car_id'] != $user->car->id) {
+            $car = Car::where('user_id', $validatedData['user_id'])->first()->user()->dissociate();
+            $car->save();
+        }
+        return true;
     }
 }
