# routes/api.php
@@ -19,5 +19,4 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::put('/update-car-user', [CarController::class, 'updateCarUser']);
 Route::apiResource('/cars', CarController::class);
